@@ -16,7 +16,7 @@
  * along with this program; if not, write to the Free Software
  * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
  *
- * $Id: html.c,v 1.181 2007/07/02 12:43:24 ace Exp $
+ * $Id: html.c,v 1.182 2007/07/29 06:26:35 c_anthon Exp $
  */
 
 #include "config.h"
@@ -160,7 +160,7 @@ WriteStyleSheet ( FILE *pf, const htmlexportcss hecss ) {
 
     fputs( "\n"
            "/* CSS Stylesheet for " VERSION_STRING " */\n"
-           "/* $Id: html.c,v 1.181 2007/07/02 12:43:24 ace Exp $ */\n",
+           "/* $Id: html.c,v 1.182 2007/07/29 06:26:35 c_anthon Exp $ */\n",
            pf );
 
     fputs( _("/* This file is distributed as a part of the "
@@ -1840,7 +1840,7 @@ HTMLEpilogue ( FILE *pf, const matchstate *pms, char *aszLinks[ 4 ],
   int fFirst;
   int i;
 
-  const char szVersion[] = "$Revision: 1.181 $";
+  const char szVersion[] = "$Revision: 1.182 $";
   int iMajor, iMinor;
 
   iMajor = atoi ( strchr ( szVersion, ' ' ) );
@@ -1920,7 +1920,7 @@ HTMLEpilogueComment ( FILE *pf ) {
 
   time_t t;
 
-  const char szVersion[] = "$Revision: 1.181 $";
+  const char szVersion[] = "$Revision: 1.182 $";
   int iMajor, iMinor;
   char *pc;
 
@@ -3478,6 +3478,25 @@ OpenCSS( const char *sz ) {
 }
 
 
+static void check_for_html_images(gchar *path)
+{
+	gchar *folder;
+	gchar *img;
+	gchar *cmd;
+
+	folder  = g_path_get_dirname(path);
+	img = g_build_filename(folder, "html-images", NULL);
+	if (! g_file_test(img, G_FILE_TEST_EXISTS))
+	{
+		cmd = g_strdup_printf("export htmlimages \"%s\"", img);
+		UserCommand(cmd);
+		g_free(cmd);
+	}
+	g_free(img);
+	g_free(folder);
+}
+
+
 extern void CommandExportGameHtml( char *sz ) {
 
     FILE *pf;
@@ -3504,6 +3523,9 @@ extern void CommandExportGameHtml( char *sz ) {
 	outputerr( sz );
 	return;
     }
+
+    if ( exsExport.het == HTML_EXPORT_TYPE_GNU )
+	    check_for_html_images(sz);
 
     ExportGameHTML( pf, plGame,
                     exsExport.szHTMLPictureURL, exsExport.szHTMLExtension, 
@@ -3591,6 +3613,9 @@ extern void CommandExportMatchHtml( char *sz ) {
 		 "match html').") );
 	return;
     }
+
+    if ( exsExport.het == HTML_EXPORT_TYPE_GNU )
+	    check_for_html_images(sz);
 
     /* Find number of games in match */
 
@@ -3699,6 +3724,9 @@ extern void CommandExportPositionHtml( char *sz ) {
 	outputerr( sz );
 	return;
     }
+
+    if ( exsExport.het == HTML_EXPORT_TYPE_GNU )
+	    check_for_html_images(sz);
 
     HTMLPrologue ( pf, &ms, getGameNumber ( plGame ), NULL, 
                    exsExport.het, exsExport.hecss );
